clouadfare/00-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: clouadfare
spec:
  podSelector: {}
  policyTypes:
  - Ingress
