clouadfare/01-allow-cloudflared-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-egress
  namespace: clouadfare
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 7844
      protocol: TCP
    - port: 7844
      protocol: UDP
